--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,11 @@
 {
   "name": "ember-debug-logger",
   "dependencies": {
-    "ember": "1.12.0",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
-    "ember-qunit": "0.3.3",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "~0.1.15",
-    "jquery": "^1.11.1",
-    "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
-    "sinonjs": "~1.14.1",
-    "visionmedia-debug": "2.2"
+    "ember": "2.3.0",
+    "ember-cli-shims": "0.1.0",
+    "ember-cli-test-loader": "0.2.2",
+    "ember-qunit-notifications": "0.1.0",
+    "visionmedia-debug": "~2.2.0",
+    "sinonjs": "~1.17.1"
   }
 }
