--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.5"
+    "debug-dist": "^2.2.0",
+    "ember-cli-babel": "^5.1.5",
+    "ember-cli-node-assets": "^0.1.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
