--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 ---
 language: node_js
 node_js:
-  - "0.12"
+  - "4"
 
 sudo: false
 
 cache:
+  yarn: true
   directories:
     - node_modules
 
@@ -21,14 +22,8 @@ matrix:
   allow_failures:
     - env: EMBER_TRY_SCENARIO=ember-canary
 
-before_install:
-  - export PATH=/usr/local/phantomjs-2.0.0/bin:$PATH
-  - "npm config set spin false"
-  - "npm install -g npm@^2"
-
-install:
-  - npm install -g bower
-  - npm install
+before_script:
+  - yarn global add bower phantomjs-prebuilt
   - bower install
 
 script:
