--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,7 @@
 {
   "name": "ember-debug-logger",
   "dependencies": {
-    "ember": "2.3.0",
-    "ember-cli-shims": "0.1.0",
-    "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0",
-    "sinonjs": "~1.17.1"
+    "ember": "2.10.2",
+    "ember-cli-shims": "0.1.0"
   }
 }
