--- a/package.json
+++ b/package.json
@@ -22,32 +22,33 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
-    "ember-cli": "^2.10.1",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-eslint": "^3.0.2",
-    "ember-cli-htmlbars": "^1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^3.1.0",
-    "ember-cli-release": "0.2.9",
+    "ember-cli": "^2.13.2",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-htmlbars": "^2.0.2",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
+    "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-release": "^1.0.0-beta.2",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.3.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-load-initializers": "^0.6.3",
-    "ember-resolver": "^2.0.3",
-    "ember-sinon": "^0.6.0",
-    "loader.js": "^4.0.0"
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.1.0",
+    "ember-sinon": "^0.7.0",
+    "ember-source": "^2.13.3",
+    "loader.js": "^4.5.0"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
     "debug-dist": "^2.6.1",
-    "ember-cli-babel": "^5.1.5",
-    "ember-cli-node-assets": "^0.1.3"
+    "ember-cli-babel": "^6.4.1",
+    "ember-cli-node-assets": "^0.2.2"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
