--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "ember build",
+    "lint:js": "eslint .",
     "start": "ember server",
     "test": "ember try:each"
   },
@@ -16,38 +17,36 @@
     "url": "https://github.com/salsify/ember-debug-logger.git"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "author": "Dan Freeman",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
-    "ember-cli": "^2.13.2",
-    "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.0.0",
-    "ember-cli-htmlbars": "^2.0.2",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
-    "ember-cli-inject-live-reload": "^1.6.1",
-    "ember-cli-qunit": "^4.0.0",
-    "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-shims": "^1.1.0",
-    "ember-cli-sri": "^2.0.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^2.0.0",
+    "broccoli-asset-rev": "^2.6.0",
+    "ember-cli": "^2.18.2",
+    "ember-cli-dependency-checker": "^2.1.0",
+    "ember-cli-eslint": "^4.2.3",
+    "ember-cli-htmlbars": "^2.0.3",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
+    "ember-cli-inject-live-reload": "^1.7.0",
+    "ember-cli-qunit": "^4.3.0",
+    "ember-cli-shims": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.1.0",
-    "ember-sinon": "^0.7.0",
-    "ember-source": "^2.13.3",
-    "loader.js": "^4.5.0"
+    "ember-resolver": "^4.5.0",
+    "ember-sinon": "^1.0.1",
+    "ember-source": "^2.18.0",
+    "eslint-plugin-ember": "^5.0.3",
+    "eslint-plugin-node": "^6.0.0",
+    "loader.js": "^4.6.0"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
     "debug-dist": "^2.6.1",
-    "ember-cli-babel": "^6.4.1",
+    "ember-cli-babel": "^6.11.0",
     "ember-cli-node-assets": "^0.2.2"
   },
   "ember-addon": {
