--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "ember build",
     "lint:js": "eslint .",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember try:each",
+    "prepublishOnly": "ember ts:precompile",
+    "postpublish": "ember ts:clean"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,11 @@
   "author": "Dan Freeman",
   "license": "MIT",
   "devDependencies": {
+    "@types/ember-qunit": "^3.0.1",
+    "@types/ember-testing-helpers": "^0.0.3",
+    "@types/qunit": "^2.0.31",
+    "@types/rsvp": "^4.0.1",
+    "@types/sinon": "^4.1.3",
     "broccoli-asset-rev": "^2.6.0",
     "ember-cli": "^2.18.2",
     "ember-cli-dependency-checker": "^2.1.0",
@@ -31,6 +38,7 @@
     "ember-cli-inject-live-reload": "^1.7.0",
     "ember-cli-qunit": "^4.3.0",
     "ember-cli-shims": "^1.2.0",
+    "ember-cli-typescript": "typed-ember/ember-cli-typescript#addon-support",
     "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-load-initializers": "^1.0.0",
@@ -39,12 +47,15 @@
     "ember-source": "^2.18.0",
     "eslint-plugin-ember": "^5.0.3",
     "eslint-plugin-node": "^6.0.0",
-    "loader.js": "^4.6.0"
+    "loader.js": "^4.6.0",
+    "typescript": "2.7.1"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
+    "@types/debug": "*",
+    "@types/ember": "*",
     "debug-dist": "^2.6.1",
     "ember-cli-babel": "^6.11.0",
     "ember-cli-node-assets": "^0.2.2"
