--- a/package.json
+++ b/package.json
@@ -2,64 +2,71 @@
   "name": "ember-debug-logger",
   "version": "1.1.0",
   "description": "An Ember addon to expose the Visionmedia debug logger.",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "scripts": {
     "build": "ember build",
+    "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
-    "lint:ts": "tslint -p tsconfig.json -c tslint.json --exclude '**/*.js'",
     "start": "ember server",
-    "test": "ember try:each",
+    "test": "ember test",
+    "lint:ts": "tslint -p tsconfig.json -c tslint.json --exclude '**/*.js'",
     "prepublishOnly": "ember ts:precompile",
-    "postpublish": "ember ts:clean"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/salsify/ember-debug-logger.git"
+    "postpublish": "ember ts:clean",
+    "test:all": "ember try:each"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
-  "author": "Dan Freeman",
-  "license": "MIT",
   "devDependencies": {
+    "@ember/optional-features": "^0.6.3",
     "@types/ember": "*",
     "@types/ember-qunit": "^3.0.1",
     "@types/ember-testing-helpers": "^0.0.3",
     "@types/qunit": "^2.0.31",
     "@types/rsvp": "^4.0.1",
     "@types/sinon": "^4.1.3",
-    "broccoli-asset-rev": "^2.6.0",
-    "ember-cli": "^2.18.2",
-    "ember-cli-dependency-checker": "^2.1.0",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-cli": "~3.4.2",
+    "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^2.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.7.0",
-    "ember-cli-qunit": "^4.3.0",
-    "ember-cli-shims": "^1.2.0",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-qunit": "^4.3.2",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-typescript": "typed-ember/ember-cli-typescript#addon-support",
-    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-resolver": "^5.0.1",
     "ember-sinon": "^1.0.1",
-    "ember-source": "^2.18.0",
-    "eslint-plugin-ember": "^5.0.3",
-    "eslint-plugin-node": "^6.0.0",
-    "loader.js": "^4.6.0",
+    "ember-source": "~3.4.0",
+    "ember-source-channel-url": "^1.1.0",
+    "ember-try": "^1.0.0",
+    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.7.1",
     "tslint": "^5.9.1",
     "typescript": "2.7.1"
   },
   "keywords": [
     "ember-addon"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/salsify/ember-debug-logger.git"
+  },
+  "license": "MIT",
+  "author": "Dan Freeman",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
   "dependencies": {
     "@types/debug": "*",
     "debug-dist": "^2.6.1",
-    "ember-cli-babel": "^6.11.0",
+    "ember-cli-babel": "^6.16.0",
     "ember-cli-node-assets": "^0.2.2"
   },
   "ember-addon": {
