--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ember-cli-inject-live-reload": "^1.7.0",
     "ember-cli-qunit": "^4.3.0",
     "ember-cli-shims": "^1.2.0",
-    "ember-cli-typescript": "typed-ember/ember-cli-typescript#addon-support",
+    "ember-cli-typescript": "^1.4.2",
     "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-load-initializers": "^1.0.0",
