--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:all": "ember try:each"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
