--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
   },
   "dependencies": {
     "@types/debug": "*",
-    "debug-dist": "^2.6.1",
-    "ember-cli-babel": "^6.16.0",
-    "ember-cli-node-assets": "^0.2.2"
+    "debug": ">=2.0.0 <5.0.0",
+    "ember-auto-import": "^1.2.21",
+    "ember-cli-babel": "^7.6.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
